Added Build and dev inside package.json and cleaned code

--- a/signup.html
+++ b/signup.html
@@ -1,40 +1,80 @@
-
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
 
     <title>Newsletter-Signup</title>
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/sign-in/">
+    <link
+      rel="canonical"
+      href="https://getbootstrap.com/docs/4.0/examples/sign-in/"
+    />
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
 
     <!-- Custom styles for this template -->
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet" />
   </head>
 
   <body class="text-center">
     <form class="form-signin" action="/" method="post">
-      <img class="mb-4" src="images\newsletter-icon-isolated-on-white-background-from-vector-27780389.jpg" style="height: 100px; width: 100px; border-radius: 70px;">
-      <h1 class="h3 mb-3 font-weight-normal">Welcome to Nebiyou Belaineh's News Letter.</h1>
+      <img
+        class="mb-4"
+        src="images\newsletter-icon-isolated-on-white-background-from-vector-27780389.jpg"
+        style="height: 100px; width: 100px; border-radius: 70px"
+      />
+      <h1 class="h3 mb-3 font-weight-normal">
+        Welcome to Nebiyou Belaineh's News Letter.
+      </h1>
       <label for="inputFName" class="sr-only">First name</label>
-      <input type="text" name="fName" id="inputFName" class="form-control top" placeholder="First name" required autofocus>
+      <input
+        type="text"
+        name="fName"
+        id="inputFName"
+        class="form-control top"
+        placeholder="First name"
+        required
+        autofocus
+      />
       <label for="inputLName" class="sr-only">Last name</label>
-      <input type="text" name="lName" id="inputLName" class="form-control middle" placeholder="Last name" required>
+      <input
+        type="text"
+        name="lName"
+        id="inputLName"
+        class="form-control middle"
+        placeholder="Last name"
+        required
+      />
       <label for="inputEmail" class="sr-only">Email address</label>
-      <input type="email" name="email" id="inputEmail" class="form-control bottom" placeholder="Email address" required >
-      
+      <input
+        type="email"
+        name="email"
+        id="inputEmail"
+        class="form-control bottom"
+        placeholder="Email address"
+        required
+      />
+
       <div class="checkbox mb-3">
         <label>
-          <input type="checkbox" value="remember-me"> Remember me
+          <input type="checkbox" value="remember-me" /> Remember me
         </label>
       </div>
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign Me Up</button>
+      <button class="btn btn-lg btn-primary btn-block" type="submit">
+        Sign Me Up
+      </button>
       <p class="mt-5 mb-3 text-muted">&copy; 2023-2024</p>
     </form>
   </body>
