--- a/signup.html
+++ b/signup.html
@@ -32,7 +32,7 @@
     <form class="form-signin" action="/" method="post">
       <img
         class="mb-4"
-        src="images\newsletter-icon-isolated-on-white-background-from-vector-27780389.jpg"
+        src="images\newsletter-icon-isolated-on-white-background-from-vector-27780389.jpg" alt="news-letter-logo"
         style="height: 100px; width: 100px; border-radius: 70px"
       />
       <h1 class="h3 mb-3 font-weight-normal">
