--- a/faliure.html
+++ b/faliure.html
@@ -11,9 +11,8 @@
 <div class="container mt-3">
   <div class="mt-4 p-5 bg-secondary text-white rounded">
     <h1>Sign Up Failed! Please try again.</h1> 
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat..</p> 
+    <p>If you would like to go back to sign up page, please click the Sign Up button.</p> 
   </div>
-  <p class="faliure">If you would like to go back to sign up page, please click the Sign Up Button.</p>
 
   <form action="/faliure" method="post">
 
