--- a/success.html
+++ b/success.html
@@ -14,10 +14,7 @@
       <div class="mt-4 p-5 bg-success text-white rounded">
         <h1>You have successfully signed up!</h1>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat..
+          Thank you for signing up! Talk soon, Ciao 😀
         </p>
       </div>
     </div>
