--- a/faliure.html
+++ b/faliure.html
@@ -3,6 +3,10 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  
+    <!-- Custom styles for this template -->
+    <link href="css/styles.css" rel="stylesheet" />
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <title>Faliure!</title>
 </head>
@@ -10,7 +14,7 @@
 
 <div class="container mt-3">
   <div class="mt-4 p-5 bg-secondary text-white rounded">
-    <h1>Sign Up Failed! Please try again.</h1> 
+    <h1 class="faliure">Sign Up Failed! Please try again.</h1> 
     <p>If you would like to go back to sign up page, please click the Sign Up button.</p> 
   </div>
 
