--- a/signup.html
+++ b/signup.html
@@ -26,17 +26,22 @@
 
     <!-- Custom styles for this template -->
     <link href="css/styles.css" rel="stylesheet" />
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap" rel="stylesheet">
   </head>
 
   <body class="text-center">
     <form class="form-signin" action="/" method="post">
       <img
         class="mb-4"
-        src="images\newsletter-icon-isolated-on-white-background-from-vector-27780389.jpg" alt="news-letter-logo"
-        style="height: 100px; width: 100px; border-radius: 70px"
+        src="images\newsletterlogoalienstyle.jpg" alt="news-letter-logo"
+        style="height: 300px; width: 300px; border-radius: 150px"
       />
-      <h1 class="h3 mb-3 font-weight-normal">
-        Welcome to Nebiyou Belaineh's News Letter.
+      <h1 class="h3 mb-3 font-weight-normal signup-msg">
+        Welcome to my News Letter.
       </h1>
       <label for="inputFName" class="sr-only">First name</label>
       <input
@@ -72,7 +77,7 @@
           <input type="checkbox" value="remember-me" /> Remember me
         </label>
       </div>
-      <button class="btn btn-lg btn-primary btn-block" type="submit">
+      <button class="btn btn-lg btn-outline-info btn-block" type="submit">
         Sign Me Up
       </button>
       <p class="mt-5 mb-3 text-muted">&copy; 2023-2024</p>
