--- a/success.html
+++ b/success.html
@@ -6,13 +6,17 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    
+    <!-- Custom styles for this template -->
+    <link href="css/styles.css" rel="stylesheet" />
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Succcess</title>
   </head>
   <body>
     <div class="container mt-3">
       <div class="mt-4 p-5 bg-success text-white rounded">
-        <h1>You have successfully signed up!</h1>
+        <h1 class="success">You have successfully signed up!</h1>
         <p>
           Thank you for signing up! Talk soon, Ciao 😀
         </p>
