Changed img style

--- a/signup.html
+++ b/signup.html
@@ -36,9 +36,8 @@
   <body class="text-center">
     <form class="form-signin" action="/" method="post">
       <img
-        class="mb-4"
+        class="mb-4 logo"
         src="images\newsletterlogoalienstyle.jpg" alt="news-letter-logo"
-        style="height: 300px; width: 300px; border-radius: 150px"
       />
       <h1 class="h3 mb-3 font-weight-normal signup-msg">
         Welcome to my News Letter.
